--- a/index.html
+++ b/index.html
@@ -55,14 +55,13 @@
                     Comidas del fin <br> del mundo
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    En un mundo post apocaliptico volveremos a vivir como nuestros antepasados, de la casa y la pezca pero ahora comeremos de manera gourmet.
                 </p>
-                <div class="mb-5 pb-5">
+                <!-- botones comentados por ser redundantes -->
+                <!-- <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
                     <button class="btn btn-lg btn-info text-light">Contacto</button>
-                </div>
+                </div> -->
             </div>
         </div>
     </header>
