modeficacion al section

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Esta austral zona, además de destacar por la belleza de sus paisajes naturales, también cautiva con su exquisita gastronomía.
         </p>
 
 
@@ -83,30 +82,21 @@
                 <i class="fas fa-camera fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    En el fin del mundo no solo comeremos mas sano, si no que disfrutaremos de paisajes sin igual lleno de naturaleza renaciente. El final de la Patagonia es una sucesión de canales, glaciares, cabos y montañas que no podrás dejar de fotografiar. 
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Crítica culinaria</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Los pocos sobrevivientes no tendran mucha critica, pero si podran degustar de el sabor natural de los alimentos .
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="far fa-map fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Un viaje al fin del mundo a lo largo de la Tierra de Fuego es uno de los viajes más impresionantes que se pueden hacer. el viaje al llamado fin del mundo nos ofrece unos paisajes increíbles entre Chile y Argentina. 
                 </p>
             </div>
         </div>
@@ -124,10 +114,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            el asado de cordero al palo es toda una experiencia. Su cocción se hace al aire libre y toma al menos un par de horas. También puede cocinarse en horno de leña, con la misma paciencia. Debido a la geografía y clima del sur de Chile, la carne de cordero tiene muy buena calidad; textura tierna y delicioso sabor. Justamente la ganadería ha sido una de las principales actividades económicas de la región de Magallanes.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
