segunda modificacion del section

--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
                         <p class="card-text">
-                            el asado de cordero al palo es toda una experiencia. Su cocción se hace al aire libre y toma al menos un par de horas. También puede cocinarse en horno de leña, con la misma paciencia. Debido a la geografía y clima del sur de Chile, la carne de cordero tiene muy buena calidad; textura tierna y delicioso sabor. Justamente la ganadería ha sido una de las principales actividades económicas de la región de Magallanes.
+                            el asado de cordero al palo es toda una experiencia. Su cocción se hace al aire libre y toma al menos un par de horas. También puede cocinarse en horno de leña, con la misma paciencia. Debido a la geografía y clima del sur de Chile, la carne de cordero tiene muy buena calidad; textura tierna y delicioso sabor. 
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <!-- <button type="button" class="btn btn-outline-info">
                             Ver más
-                        </button>
+                        </button> -->
                     </div>
                 </div>
             </div>
@@ -128,14 +128,11 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            En el fin del mundo aprenderemos a disfrutar y aprovechar todos los nutrientes que te ofrece la naturaleza, las cascaras y las semillas searn aprovechadas.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <!-- <button type="button" class="btn btn-outline-info">
                             Ver más
-                        </button>
+                        </button> -->
                     </div>
                 </div>
             </div>
@@ -143,16 +140,13 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Salmones de la Patagonia</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            En la patagonia existe una abundante habitad de peces, entre ellos el salmon. existen muschas preparaciones para esta exquisita carne, desde el salmon aumado hasta el salmon a la parrilla.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <!-- <button type="button" class="btn btn-outline-info">
                             Ver más
-                        </button>
+                        </button> -->
                     </div>
                 </div>
             </div>
